# fastapi-template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  project_snapshot.txt  pyproject.toml
alembic/: env.py
app/: main.py
app/api/dependencies/: db.py
app/api/v1/: api.py
app/api/v1/endpoints/: test.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
app/models/: user.py
app/repositories/: base.py
app/schemas/: base.py
app/services/: base.py
